--- a/AceGrading/AceGrading.csproj
+++ b/AceGrading/AceGrading.csproj
@@ -178,7 +178,9 @@
     <Resource Include="Icons\wifi_bad.png" />
     <Resource Include="Icons\wifi_good.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Icons\wifi_disconnected.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
